RESOLVED FIXED311789
[GTK] ASSERTION FAILED: GLContextWrapper::currentContext() in WebCore::BitmapTexturePool::acquireTexture()
https://bugs.webkit.org/show_bug.cgi?id=311789
Summary [GTK] ASSERTION FAILED: GLContextWrapper::currentContext() in WebCore::Bitmap...
Fujii Hironori
Reported 2026-04-08 21:33:07 PDT
[GTK] ASSERTION FAILED: GLContextWrapper::currentContext() in WebCore::BitmapTexturePool::acquireTexture() I'm seeing the following assertion failure twice today while browsing some web sites with GTK debug build of 310680@main. I don't know how to reproduce it. It's not easy to reproduce. ASSERTION FAILED: GLContextWrapper::currentContext() ../../../Source/WebCore/platform/graphics/texmap/BitmapTexturePool.cpp(73) : Ref<BitmapTexture> WebCore::BitmapTexturePool::acquireTexture(const IntSize &, OptionSet<BitmapTexture::Flags>) 1 0x7fc50730a622 WebCore::BitmapTexturePool::acquireTexture(WebCore::IntSize const&, WTF::OptionSet<WebCore::BitmapTexture::Flags, (WTF::ConcurrencyTag)0>) 2 0x7fc50735a0c4 WebCore::ScrollerCoordinated::updateValues() 3 0x7fc50735c20d WebCore::ScrollerPairCoordinated::updateValues() 4 0x7fc507364fa5 WebCore::ScrollingTreeScrollingNodeDelegateCoordinated::updateVisibleLengths() 5 0x7fc507362e9e WebCore::ScrollingTreeFrameScrollingNodeCoordinated::repositionRelatedLayers() 6 0x7fc50d1eb46a WebCore::ScrollingTreeScrollingNode::applyLayerPositions() 7 0x7fc50d1b9812 WebCore::ScrollingTree::applyLayerPositionsRecursive(WebCore::ScrollingTreeNode&) 8 0x7fc50d1b97e0 WebCore::ScrollingTree::applyLayerPositionsInternal() 9 0x7fc50735e6e6 WebCore::ScrollingTreeCoordinated::applyLayerPositionsInternal() 10 0x7fc50d1b970e WebCore::ScrollingTree::applyLayerPositions() 11 0x7fc50d145bb2 WebCore::AsyncScrollingCoordinator::applyScrollingTreeLayerPositions() 12 0x7fc50cfbeadd WebCore::Page::finalizeRenderingUpdateForRootFrame(WebCore::LocalFrame&, WTF::OptionSet<WebCore::FinalizeRenderingUpdateFlags, (WTF::ConcurrencyTag)0>) 13 0x7fc50cfbe856 WebCore::Page::finalizeRenderingUpdate(WTF::OptionSet<WebCore::FinalizeRenderingUpdateFlags, (WTF::ConcurrencyTag)0>) 14 0x7fc506db6d89 WebKit::WebPage::finalizeRenderingUpdate(WTF::OptionSet<WebCore::FinalizeRenderingUpdateFlags, (WTF::ConcurrencyTag)0>) 15 0x7fc506e7d387 WebKit::LayerTreeHost::updateRendering() 16 0x7fc506e7c051 WebKit::FrameRenderer::renderingUpdateRunLoopObserverFired() 17 0x7fc506e84478 WebKit::FrameRenderer::FrameRenderer()::$_0::operator()() const 18 0x7fc506e84459 WTF::Detail::CallableWrapper<WebKit::FrameRenderer::FrameRenderer()::$_0, void>::call() 19 0x7fc50437a7a2 WTF::Function<void ()>::operator()() const 20 0x7fc50d29232b WebCore::RunLoopObserver::runLoopObserverFired() 21 0x7fc50d411088 WebCore::RunLoopObserver::schedule(WTF::RefPtr<WTF::RunLoop, WTF::RawPtrTraits<WTF::RunLoop>, WTF::DefaultRefDerefTraits<WTF::RunLoop> >, WTF::OptionSet<WTF::RunLoop::Activity, (WTF::ConcurrencyTag)0>)::$_0::operator()() const 22 0x7fc50d411069 WTF::Detail::CallableWrapper<WebCore::RunLoopObserver::schedule(WTF::RefPtr<WTF::RunLoop, WTF::RawPtrTraits<WTF::RunLoop>, WTF::DefaultRefDerefTraits<WTF::RunLoop> >, WTF::OptionSet<WTF::RunLoop::Activity, (WTF::ConcurrencyTag)0>)::$_0, void>::call() 23 0x7fc4f6aa4352 WTF::Function<void ()>::operator()() const 24 0x7fc4f8be1f74 WTF::ActivityObserver::notify() 25 0x7fc4f8be1320 WTF::RunLoop::notifyActivity(WTF::RunLoop::Activity) 26 0x7fc4f8be0e54 WTF::RunLoop::runGLibMainLoopIteration(WTF::RunLoop::MayBlock) 27 0x7fc4f8be13b0 WTF::RunLoop::runGLibMainLoop() 28 0x7fc4f8be144c WTF::RunLoop::run() 29 0x7fc506ee1b51 WebKit::AuxiliaryProcessMainBase<WebKit::WebProcess, true>::run(int, char**) 30 0x7fc506ebf860 int WebKit::AuxiliaryProcessMain<WebKit::WebProcessMainGtk>(int, char**) 31 0x7fc506ebf81b WebKit::WebProcessMain(int, char**)
Attachments
Fujii Hironori
Comment 1 2026-04-08 22:13:18 PDT
EWS
Comment 2 2026-04-09 00:01:17 PDT
Committed 310829@main (a8b923f87381): <https://commits.webkit.org/310829@main> Reviewed commits have been landed. Closing PR #62331 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.