Cherry-pick 310829@main (a8b923f87381). https://bugs.webkit.org/show_bug.cgi?id=311789

[GTK][WPE] ASSERTION FAILED: GLContextWrapper::currentContext() in WebCore::BitmapTexturePool::acquireTexture()
    https://bugs.webkit.org/show_bug.cgi?id=311789

    Reviewed by Carlos Garcia Campos.

    An assertion failed in WebCore::BitmapTexturePool::acquireTexture() since there
    was no current GL context in the scrolling thread.

    Make the GL context current before calling BitmapTexturePool::acquireTexture().

    * Source/WebCore/page/scrolling/coordinated/ScrollerCoordinated.cpp:
    (WebCore::ScrollerCoordinated::updateValues):

    Canonical link: https://commits.webkit.org/310829@main

Canonical link: https://commits.webkit.org/305877.391@webkitglib/2.52