Source/WebCore/page/scrolling/coordinated/ScrollerCoordinated.cpp
@@ -135,10 +135,10 @@ void ScrollerCoordinated::updateValues()
 
     auto* grContext = display.skiaGrContext();
     RELEASE_ASSERT(grContext);
+    GLContext::ScopedGLContextCurrent scopedCurrent(*glContext);
 
     Ref texture = BitmapTexturePool::singleton().acquireTexture(state.frameRect.size(), { BitmapTexture::Flags::SupportsAlpha });
 
-    GLContext::ScopedGLContextCurrent scopedCurrent(*glContext);
     GrGLTextureInfo externalTexture;
     externalTexture.fTarget = GL_TEXTURE_2D;
     externalTexture.fID = texture->id();
